added stories section and its responsive part

--- a/index.html
+++ b/index.html
@@ -79,14 +79,51 @@
         <p class="curriculum-btn btn-third">Read More</p>
       </div>
     </section>
-
-
-
-
-
   </header>
-  <main>
 
+
+  <main class="bg-primary  bg-secondary">
+<!-- Stories section -->
+ <div class="stories-info">
+  <h3 class="stories-info-title">Our Stories</h3>
+ </div>
+ <section class="stories-container">
+<div class="stories-item-1">
+  <img src="./assets/story-1.png" alt="" class="stories-img-1">
+  <h5 class="stories-title-1">A fun toddler coloring training on <br>
+    classroom</h5>
+  <p class="stories-description raleway-font">Beautiful branding for changes by Never Now in Australia. <br>
+    changes is a platform for open discussion in an inclusive and <br>
+    collaborative environment, providing the...</p>
+</div>
+<div class="stories-item-2">
+  <img src="./assets/story-2.png" alt="" class="stories-img-2">
+  <h5 class="custom-title title-2">Find out if a school fits the <br>
+    family’s needs</h5>
+   
+</div>
+<div class="stories-item-3">
+ <img src="./assets/story-3.png" alt="" class="stories-img-3">
+  <h5 class="custom-title title-3">Summer math & literacy <br>
+    centres for kids</h5>
+ 
+</div>
+<div class="stories-item-4">
+  <img src="./assets/story-4.png" alt="" class="stories-img-4">
+  <h5 class="custom-title title-4">Classroom management <br>
+    techniques for new tutors</h5>
+   
+</div>
+<div class="stories-item-5">
+  <img src="./assets/story-5.png" alt="" class="stories-img-5">
+  <h5 class="custom-title title-5">Conversation rhymes <br>
+    improve kids listening</h5>
+   
+</div>
+ </section>
+ <div class="btn-div">
+  <button class="btn-bottom">View All</button>
+ </div>
   </main>
   <footer>
 
@@ -94,3 +131,5 @@
 </body>
 
 </html>
+
+
