added footer section and its responsive styles

--- a/index.html
+++ b/index.html
@@ -125,8 +125,35 @@
   <button class="btn-bottom">View All</button>
  </div>
   </main>
-  <footer>
+  <footer class="bg-third">
 
+ 
+<section class="footer-container">
+  <div class="footer-item-1">
+<div class="logo-part">
+  <img src="./assets/fi_15371027.png" alt="" class="logo-image">
+  <h2 class="footer-title">Kids <br>
+    Education</h2>
+</div>
+<p class="footer-description">Pizza ipsum dolor meat lovers buffalo. <br> Deep dolor roll melted bacon Bianca pan <br> bacon pineapple Aussie. Mayo rib sauce <br> Hawaiian meatball.</p>
+  </div>
+<div class="footer-item-2">
+<h5 class="footer-card-title">About School</h5>
+<p class="footer-nav">Home</p>
+<p class="footer-nav">About</p>
+<p class="footer-nav">Facilities</p>
+<p class="footer-nav">Admission</p>
+</div>
+<div class="footer-item-3">
+<h5 class="footer-card-title">Keep In Touch</h5>
+<div class="social-links">
+  <img src="./assets/fb.png" alt="">
+  <img src="./assets/dribble.png" alt="">
+  <img src="./assets/twitter.png" alt="">
+  <img src="./assets/google+.png" alt="">
+</div>
+</div>
+</section>
   </footer>
 </body>
 
