--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
  <section class="stories-container">
 <div class="stories-item-1">
   <img src="./assets/story-1.png" alt="" class="stories-img-1">
+  <button class="btn-stories-1 btn-blue">November 19, 2019</button>
   <h5 class="stories-title-1">A fun toddler coloring training on <br>
     classroom</h5>
   <p class="stories-description raleway-font">Beautiful branding for changes by Never Now in Australia. <br>
@@ -98,24 +99,28 @@
 </div>
 <div class="stories-item-2">
   <img src="./assets/story-2.png" alt="" class="stories-img-2">
+  <button class="btn-stories-2 btn-blue">November 19, 2019</button>
   <h5 class="custom-title title-2">Find out if a school fits the <br>
     family’s needs</h5>
    
 </div>
 <div class="stories-item-3">
  <img src="./assets/story-3.png" alt="" class="stories-img-3">
+ <button class="btn-stories-3 btn-blue">November 19, 2019</button>
   <h5 class="custom-title title-3">Summer math & literacy <br>
     centres for kids</h5>
  
 </div>
 <div class="stories-item-4">
   <img src="./assets/story-4.png" alt="" class="stories-img-4">
+  <button class="btn-stories-4 btn-blue">September 10, 2019</button>
   <h5 class="custom-title title-4">Classroom management <br>
     techniques for new tutors</h5>
    
 </div>
 <div class="stories-item-5">
   <img src="./assets/story-5.png" alt="" class="stories-img-5">
+  <button class="btn-stories-5 btn-blue">July 19, 2019</button>
   <h5 class="custom-title title-5">Conversation rhymes <br>
     improve kids listening</h5>
    
