added left arrow and right arrow symbol and maequee styles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+<div class="marquee">
+  <span>Iam Hridoy read in Islamic university and i want to be a Web Developer.I am passionate and want be a skillfull
+    man .Now i am learning Mern Stack development in Programming Hero.</span>
+</div>
 
 <body class="quicksand-font">
   <header class="bg-primary">
@@ -60,108 +64,120 @@
       <div class="curriculum-item-1">
         <img src="./assets/kinder.png" alt="" class="curriculum-image-1">
         <h4 class="curriculum-title-1">Kinder (3-6) Years</h4>
-        <p class="curriculum-description raleway-font">Cum sociis natoque penatibus et magnis <br>dis parturient montes, nascetur
+        <p class="curriculum-description raleway-font">Cum sociis natoque penatibus et magnis <br>dis parturient montes,
+          nascetur
           ridiculus <br>mu sdis parturient</p>
         <p class="curriculum-btn btn-first">Read More</p>
       </div>
       <div class="curriculum-item-2">
         <img src="./assets/elementary.png" alt="" class="curriculum-image-2">
         <h4 class="curriculum-title-2">Elementary School</h4>
-        <p class="curriculum-description raleway-font">Cum sociis natoque penatibus et magnis <br>dis parturient montes, nascetur
+        <p class="curriculum-description raleway-font">Cum sociis natoque penatibus et magnis <br>dis parturient montes,
+          nascetur
           ridiculus <br>mu sdis parturient</p>
         <p class="curriculum-btn btn-second">Read More</p>
       </div>
       <div class="curriculum-item-3">
         <img src="./assets/middle.png" alt="" class="curriculum-image-3">
         <h4 class="curriculum-title-3">Elementary School</h4>
-        <p class="curriculum-description raleway-font">Cum sociis natoque penatibus et magnis <br>dis parturient montes, nascetur
+        <p class="curriculum-description raleway-font">Cum sociis natoque penatibus et magnis <br>dis parturient montes,
+          nascetur
           ridiculus <br>mu sdis parturient</p>
         <p class="curriculum-btn btn-third">Read More</p>
       </div>
     </section>
+    <div class="center">
+      <div class="circle">
+        <i class="fa-solid fa-angle-left arrow bara"></i>
+
+      </div>
+      <div class="circle">
+
+        <i class="fa-solid fa-angle-right arrow bara"></i>
+      </div>
+    </div>
   </header>
 
 
   <main class="bg-primary  bg-secondary">
-<!-- Stories section -->
- <div class="stories-info">
-  <h3 class="stories-info-title">Our Stories</h3>
- </div>
- <section class="stories-container">
-<div class="stories-item-1">
-  <img src="./assets/story-1.png" alt="" class="stories-img-1">
-  <button class="btn-stories-1 btn-blue">November 19, 2019</button>
-  <h5 class="stories-title-1">A fun toddler coloring training on <br>
-    classroom</h5>
-  <p class="stories-description raleway-font">Beautiful branding for changes by Never Now in Australia. <br>
-    changes is a platform for open discussion in an inclusive and <br>
-    collaborative environment, providing the...</p>
-</div>
-<div class="stories-item-2">
-  <img src="./assets/story-2.png" alt="" class="stories-img-2">
-  <button class="btn-stories-2 btn-blue">November 19, 2019</button>
-  <h5 class="custom-title title-2">Find out if a school fits the <br>
-    family’s needs</h5>
-   
-</div>
-<div class="stories-item-3">
- <img src="./assets/story-3.png" alt="" class="stories-img-3">
- <button class="btn-stories-3 btn-blue">November 19, 2019</button>
-  <h5 class="custom-title title-3">Summer math & literacy <br>
-    centres for kids</h5>
- 
-</div>
-<div class="stories-item-4">
-  <img src="./assets/story-4.png" alt="" class="stories-img-4">
-  <button class="btn-stories-4 btn-blue">September 10, 2019</button>
-  <h5 class="custom-title title-4">Classroom management <br>
-    techniques for new tutors</h5>
-   
-</div>
-<div class="stories-item-5">
-  <img src="./assets/story-5.png" alt="" class="stories-img-5">
-  <button class="btn-stories-5 btn-blue">July 19, 2019</button>
-  <h5 class="custom-title title-5">Conversation rhymes <br>
-    improve kids listening</h5>
-   
-</div>
- </section>
- <div class="btn-div">
-  <button class="btn-bottom">View All</button>
- </div>
+    <!-- Stories section -->
+    <div class="stories-info bg-primary">
+      <h3 class="stories-info-title">Our Stories</h3>
+    </div>
+    <section class="stories-container">
+      <div class="stories-item-1">
+        <img src="./assets/story-1.png" alt="" class="stories-img-1">
+        <button class="btn-stories-1 btn-blue raleway-font">November 19, 2019</button>
+        <h5 class="stories-title-1">A fun toddler coloring training on <br>
+          classroom</h5>
+        <p class="stories-description raleway-font">Beautiful branding for changes by Never Now in Australia. <br>
+          changes is a platform for open discussion in an inclusive and <br>
+          collaborative environment, providing the...</p>
+      </div>
+      <div class="stories-item-2 bg-primary">
+        <img src="./assets/story-2.png" alt="" class="stories-img-2">
+        <button class="btn-stories-2 btn-blue raleway-font">November 19, 2019</button>
+        <h5 class="custom-title title-2">Find out if a school fits the <br>
+          family’s needs</h5>
+
+      </div>
+      <div class="stories-item-3 bg-primary">
+        <img src="./assets/story-3.png" alt="" class="stories-img-3">
+        <button class="btn-stories-3 btn-blue raleway-font">November 19, 2019</button>
+        <h5 class="custom-title title-3">Summer math & literacy <br>
+          centres for kids</h5>
+
+      </div>
+      <div class="stories-item-4 bg-primary">
+        <img src="./assets/story-4.png" alt="" class="stories-img-4">
+        <button class="btn-stories-4 btn-blue raleway-font">September 10, 2019</button>
+        <h5 class="custom-title title-4">Classroom management <br>
+          techniques for new tutors</h5>
+
+      </div>
+      <div class="stories-item-5 bg-primary">
+        <img src="./assets/story-5.png" alt="" class="stories-img-5">
+        <button class="btn-stories-5 btn-blue raleway-font">July 19, 2019</button>
+        <h5 class="custom-title title-5">Conversation rhymes <br>
+          improve kids listening</h5>
+
+      </div>
+    </section>
+    <div class="btn-div bg-primary">
+      <button class="btn-bottom">View All</button>
+    </div>
   </main>
   <footer class="bg-third">
 
- 
-<section class="footer-container">
-  <div class="footer-item-1">
-<div class="logo-part">
-  <img src="./assets/fi_15371027.png" alt="" class="logo-image">
-  <h2 class="footer-title">Kids <br>
-    Education</h2>
-</div>
-<p class="footer-description">Pizza ipsum dolor meat lovers buffalo. <br> Deep dolor roll melted bacon Bianca pan <br> bacon pineapple Aussie. Mayo rib sauce <br> Hawaiian meatball.</p>
-  </div>
-<div class="footer-item-2">
-<h5 class="footer-card-title">About School</h5>
-<p class="footer-nav">Home</p>
-<p class="footer-nav">About</p>
-<p class="footer-nav">Facilities</p>
-<p class="footer-nav">Admission</p>
-</div>
-<div class="footer-item-3">
-<h5 class="footer-card-title">Keep In Touch</h5>
-<div class="social-links">
-  <img src="./assets/fb.png" alt="">
-  <img src="./assets/dribble.png" alt="">
-  <img src="./assets/twitter.png" alt="">
-  <img src="./assets/google+.png" alt="">
-</div>
-</div>
-</section>
+
+    <section class="footer-container">
+      <div class="footer-item-1">
+        <div class="logo-part">
+          <img src="./assets/fi_15371027.png" alt="" class="logo-image">
+          <h2 class="footer-title">Kids <br>
+            Education</h2>
+        </div>
+        <p class="footer-description">Pizza ipsum dolor meat lovers buffalo. <br> Deep dolor roll melted bacon Bianca
+          pan <br> bacon pineapple Aussie. Mayo rib sauce <br> Hawaiian meatball.</p>
+      </div>
+      <div class="footer-item-2">
+        <h5 class="footer-card-title">About School</h5>
+        <p class="footer-nav">Home</p>
+        <p class="footer-nav">About</p>
+        <p class="footer-nav">Facilities</p>
+        <p class="footer-nav">Admission</p>
+      </div>
+      <div class="footer-item-3">
+        <h5 class="footer-card-title">Keep In Touch</h5>
+        <div class="social-links">
+          <img src="./assets/fb.png" alt="">
+          <img src="./assets/dribble.png" alt="">
+          <img src="./assets/twitter.png" alt="">
+          <img src="./assets/google+.png" alt="">
+        </div>
+      </div>
+    </section>
   </footer>
 </body>
 
 </html>
-
-
